@@ -13,6 +13,12 @@ filebeat:
             name: generic
             namespace: default
       - add_fields:
+          target: "datastream"
+          fields:
+            type: logs
+            dataset: generic
+            namespace: default
+      - add_fields:
           target: "event"
           fields:
             dataset: generic
